# usdProctest

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  generatedSchema.usda  myProcMesh.cpp  myProcMesh.h  plugInfo.json  schema.usda  wrapMyProcMesh.cpp  wrapTokens.cpp
src/usdProctest/: CMakeLists.txt  api.h  schema.usda  tokens.cpp  tokens.h
src/usdProctestFileFormat/: CMakeLists.txt  fileFormat.cpp  fileFormat.h  plugInfo.json  proctest.usda
